# CrossChainTokenSwapNear

./: .gitignore  README.md  ft_transfer_call.sh  ft_transfer_call_banana.sh  ft_transfer_call_nusdt.sh  init.sh  register_token.sh  storage_deposit_ref.sh  storage_deposit_token.sh  swap_tokens_to_user_with_fee.sh  swap_tokens_to_user_with_fee_banana.sh  swap_tokens_to_user_with_fee_v2.sh
contract/: Cargo.toml  build.sh  deploy.sh
contract/neardev/: dev-account  dev-account.env
contract/res/: crosschain_token_swap.wasm
contract/src/: errors.rs  interfaces.rs  lib.rs  management.rs  ref_finance_swap_action.rs  token_receiver.rs  utils.rs  views.rs
mainnet_scripts/: ft_transfer_call.sh  register_token.sh  storage_deposit_ref.sh  storage_deposit_token.sh
mainnet_scripts/management/: add_other_blockchain.sh  init.sh  remove_other_blockchain.sh  set_rubic_address_of_blockchain.sh
scripts/: ft_transfer_call.sh  new.sh  register_token.sh  storage_deposit_ref.sh  storage_deposit_token.sh  swap_tokens_to_user_with_fee.sh  swap_tokens_to_user_with_fee_banana.sh  swap_tokens_to_user_with_fee_nusdt.sh
scripts/management/: add_other_blockchain.sh  init.sh  set_fee_amount.sh  set_rubic_address_of_blockchain.sh  set_tranfer_token.sh
